zellij-integration-tests/tests/snapshots/rendering_width__ambiguous_width_characters_render_narrow.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
$ |±°→αβ§¶※×÷⌘⚠|──|
FIXTURE-END█
