zellij-integration-tests/tests/snapshots/rendering_width__box_drawing_characters_render_narrow.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
$ ┌─┬─┐
│A│B│
├─┼─┤
└─┴─┘
╔═╗█▉▊
FIXTURE-END█
