zellij-integration-tests/tests/snapshots/rendering_width__cjk_text_renders_at_double_width.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
$ 你好世界 日本語テキスト 한국어 |ascii|
FIXTURE-END█
