zellij-integration-tests/tests/snapshots/rendering_width__combining_marks_render_over_their_base_characters.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
$ ecole|a|o|école|ᄀ|
FIXTURE-END█
