zellij-integration-tests/tests/snapshots/rendering_width__cursor_forward_past_content_pads_the_row_before_wide_characters.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: normalized(&grid_snapshot)
---
$
      世界X
FIXTURE-END█
