zellij-integration-tests/tests/snapshots/rendering_width__ech_over_a_wide_character_keeps_the_rest_of_the_line_aligned.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: normalized(&grid_snapshot)
---
$
  界abc
FIXTURE-END█
