zellij-integration-tests/tests/snapshots/rendering_width__emoji_zwj_and_skin_tone_sequences_render.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
$ 😀|👨👩👧👦|👋🏽|🧑🏿🚀|⚠|🇺🇸|
FIXTURE-END█
