zellij-integration-tests/tests/snapshots/rendering_width__wide_character_straddling_the_right_edge_wraps_whole.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: normalized(&grid_snapshot)
---
$                                                                                                                    AB
世界
FIXTURE-END█
